<resources>
    <string name="app_name">JupaFazz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number_short">Nomor HP</string>
    <string name="login">Masuk</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="create_transaction">Buat Transaksi</string>
    <string name="notification">Notifikasi</string>
    <string name="account">Akun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_balance">Saldo Anda</string>
    <string name="top_up">Isi Saldo</string>
    <string name="top_up_desc">Isi Saldo akun anda agar tetap bisa melakukan transaksi di JupaFazz!\nSilahkan pilih metode top up anda.</string>
    <string name="send_money">Kirim</string>
    <string name="send_money_full">Kirim Saldo</string>
    <string name="scan">Pindai</string>
    <string name="choices_menu">Menu Pilihan</string>
    <string name="add_menu">Tambah Menu</string>
    <string name="history_transaction">Riwayat Transaksi</string>
    <string name="sort">Sortir</string>
    <string name="filter">Filter</string>
    <string name="password">Kata Sandi</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="not_have_account">Belum Punya Akun?</string>
    <string name="already_account">Sudah Memiliki Akun?</string>
    <string name="register_here">Daftar Disini</string>
    <string name="login_here">Masuk Disini</string>
    <string name="register">Daftar</string>
    <string name="account_information">Informasi Akun</string>
    <string name="account_setting">Pengaturan Akun</string>
    <string name="change_password">Ubah Password</string>
    <string name="change_pin">Ubah Pin</string>
    <string name="other_menu">Menu Lainnya</string>
    <string name="loading">Mohon Tunggu</string>
    <string name="verification">Verifikasi</string>
    <string name="please_wait">Mohon Tunggu</string>
    <string name="desc_start_session">Kami sedang memeriksa akun dan perangkat anda sebelum mengakses halaman utama, proses ini akan memakan waktu hingga 1 menit.</string>
    <string name="paid_title">Bukti Pembayaran</string>
    <string name="share_receipt">Bagikan Bukti Pembayaran</string>
    <string name="total_paid">Total Bayar</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="not_receive_code">Tidak Menerima Kode?</string>
    <string name="resend">Kirim Ulang</string>
    <string name="something_wrong">Terjadi Kesalahan</string>
    <string name="understood">Mengerti</string>
    <string name="grant_before">Ups, Berikan Izin Dulu Ya!</string>
    <string name="grant">Izinkan</string>
    <string name="last_transaction">Transaksi Terakhir</string>
    <string name="search_product">Cari Produk</string>
    <string name="purchase">Beli</string>
    <string name="fill_phone_number">Masukkan No. HP</string>
    <string name="fill_customer_id">Masukkan ID Pelanggan</string>
    <string name="fill_account_id">Masukkan ID Akun</string>
    <string name="fill_id">Masukkan No HP/ID Akun/ID Pelanggan</string>
    <string name="payment_success">Pembayaran Berhasil!</string>
    <string name="back">Kembali</string>
    <string name="order_number">Nomor Order</string>
    <string name="transaction_date">Tanggal Transaksi</string>
    <string name="target">Tujuan</string>
    <string name="share">Bagikan</string>
    <string name="add_to_favorite">Tambahkan Ke Favorit</string>
    <string name="finish">Selesai</string>
    <string name="see_detail_transaction">Lihat Detail Transaksi</string>
    <string name="order_status">Status Pesanan</string>
    <string name="banner">Spanduk</string>
    <string name="process">Proses</string>
    <string name="i_need_help">Saya membutuhkan bantuan</string>
    <string name="desc_top_up_to_rek_acc">Silahkan transfer ke rekening dibawah untuk melanjutkan proses isi saldo.</string>
    <string name="copy">Salin</string>
    <string name="total_amount">Total Transfer</string>
    <string name="ive_already_trf">Saya Sudah Transfer</string>
    <string name="help">Bantuan</string>
    <string name="input_amount">Masukkan nominal</string>
    <string name="prefix_rp">Rp</string>
    <string name="from_date">Dari Tanggal</string>
    <string name="to_date">Sampai Tanggal</string>
    <string name="mutation">Mutasi Saldo</string>
    <string name="mutation_desc">Menampilkan seluruh aktivitas saldo anda sesuai dari tanggal yang telah ditentukan</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="confirm_new_password">Konfirmasi Kata Sandi Baru</string>
    <string name="change_password_desc">Demi keamanan akun anda, mohon untuk mengganti kata sandi anda secara berkala.</string>
    <string name="change_pin_desc">Demi keamanan akun anda, mohon untuk mengganti pin anda secara berkala.</string>
    <string name="open_invoice">Buka Invoice</string>
    <string name="logout">Keluar</string>
    <string name="deposit_history">Riwayat Deposit</string>
    <string name="total_balance">Total Saldo</string>
    <string name="help_total_balance">Total saldo yang di dapat saat melakukan deposit diluar biaya admin (jika ada).</string>
    <string name="total_balance_received">Total saldo di dapat</string>
    <string name="download_banner">Unduh Spanduk</string>
    <string name="your_qr_code">Kode QR Anda</string>
    <string name="your_qr_code_desc">Tunjukan kode QR Diatas kepada merchant untuk melakukan transaksi</string>
    <string name="total_want_to_transfer">Jumlah yang ingin di transfer</string>
    <string name="send_balance_to">Kirim dana ke</string>
    <string name="desc_send_money">Kirim saldo bebas biaya admin untuk ke semua pengguna aplikasi JupaFazz!</string>
    <string name="input_pin">Masukan Pin</string>
    <string name="input_pin_desc">Masukkan pin kamu untuk melanjutkan transaksi</string>
    <string name="old_pin">Pin Lama</string>
    <string name="new_pin">Pin Baru</string>
    <string name="confirm_new_pin">Konfirmasi Pin Baru</string>
</resources>