<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_new"
        android:iconTint="@color/black"
        android:title="@string/home" />
    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history_new"
        android:iconTint="@color/black"
        android:title="@string/history" />
    <item
        android:id="@+id/qr"
        android:title="@string/create_transaction" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification_new"
        android:iconTint="@color/black"
        android:title="@string/notification" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_new"
        android:iconTint="@color/black"
        android:title="@string/account" />

</menu>