<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp"
    tools:context=".activity.MainActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Halo, Selamat datang kembali!"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_short"
            app:prefixText="+62"
            app:prefixTextColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="13"
                android:id="@+id/inputPhoneNumber"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_marginTop="8dp"
            app:useMaterialThemeColors="true"
            app:buttonTint="@color/dark_blue"
            android:checked="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/buttonLogin"
            app:backgroundTint="@color/dark_blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Dengan masuk, anda menyetujui ketentuan layanan dan kebijakan privasi"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>