<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp"
    tools:context=".activity.OtpActivity">

    <TextView
        android:id="@+id/textVerificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/verification"/>

    <TextView
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:id="@+id/textVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textVerificationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"/>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bar_enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textVerification"
        app:length="6"
        app:box_margin_top="16dp"
        app:box_margin_bottom="8dp"
        app:otp_box_background="@drawable/otp_box"
        app:otp_box_background_inactive="@drawable/otp_box_inactive"
        app:otp_box_background_active="@drawable/otp_box_active"
        app:otp_box_background_error="@drawable/otp_box_error" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpView">

        <TextView
            android:id="@+id/textNotReceiveCodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_receive_code" />

        <TextView
            android:enabled="false"
            android:layout_marginStart="8dp"
            android:id="@+id/textResend"
            android:textColor="@color/grey_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/verification"
        android:id="@+id/buttonVerification"/>

</androidx.constraintlayout.widget.ConstraintLayout>